fix some link stuff
links to ids like `#com.example.app` scrolled too far because of the sticky header. Add `scroll-margin-top` to fix this.

--- a/sass/_app_compat_card.scss
+++ b/sass/_app_compat_card.scss
@@ -10,10 +10,15 @@
         padding: 5px;
         margin-bottom: 25px;
         margin-right: 25px;
+        scroll-margin-top: $header-height;
 
         .app-compat-card-comments {
             border-top: 2px solid $color2;
             padding-top: 10px;
+        }
+
+        h3 {
+            margin-top: 15px;
         }
     }
 }
